--- a/ysdm.fg.app/src/main/res/values/strings.xml
+++ b/ysdm.fg.app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="_2_handler_thread"><![CDATA[2. Handler & Thread]]></string>
     <string name="_3_datastorage">3. DataStorage</string>
     <string name="_1_window_size">1. Window Size:</string>
+    <string name="title_activity_thread_handling">ThreadHandlingActivity</string>
 </resources>
